# libpepito

./: CMakeLists.txt  PepitoConfig.cmake  pepito.cpp
include/pepito/: pepito.h
